# my_dotfiles

./: .gitignore
black/.config/: black
code/.config/Code/User/: keybindings.json  settings.json
copier/.copier/python-project/: README.md  Taskfile.yaml  copier.yml  pyproject.toml
copier/.copier/python-project/project/: .pre-commit-config.yaml.j2  README.md.j2  pyproject.toml.j2  {% if docker_compose %}docker-compose.yml{% endif %}.j2  {% if dockerfile %}Dockerfile{% endif %}.j2  {% if mkdocs %}mkdocs.yml{% endif %}.j2  {% if taskfile %}Taskfile.yaml{% endif %}.j2
copier/.copier/python-project/project/{% if mkdocs %}docs{% endif %}/: index.md.j2  modules.md.j2
copier/.copier/python-project/project/{% if pytest %}tests{% endif %}/: test_foo.py.j2
copier/.copier/python-project/project/{{project_slug}}/: foo.py  main.py
kitty/.config/kitty/: kitty.conf
nvim/.config/nvim/lua/main/: 00Tree.html  init.lua
pylintrc/.config/: pylintrc
tmux-remote/: .tmux.conf
wezterm/.config/wezterm/: wezterm.lua
