[project]
name = "python-project-template"
version = "0.0.1"
description = "A python copier template for a new python project"
authors = [{ name = "Aleksandr Groshev"}]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
  "copier>=9.4.1"
]

[dependency-groups]
dev = [
    "pre-commit>=2.20.0",
  ]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint]
disable = ["missing-module-docstring", "missing-function-docstring", "missing-class-docstring"]
max-line-length = 110
ignore-patterns = ["tests/*"]
output-format = "colorized"
